@@ -83,7 +83,7 @@ public class SpaceController {
                         }))
                 );
         if (!CollectionUtils.isEmpty(typesFromIncomingLinks)) {
-            List<String> uniqueTypes = typesFromIncomingLinks.stream().distinct().collect(Collectors.toList());
+            List<String> uniqueTypes = typesFromIncomingLinks.stream().distinct().toList();
             Map<String, KGCoreResult<StructureOfType>> incomingLinksTypesByNameResult = spaceClient.getTypesByName(uniqueTypes, false);
             Map<String, StructureOfType> incomingLinksTypes = Helpers.getTypesByName(incomingLinksTypesByNameResult);
             typesMap.putAll(incomingLinksTypes);
@@ -131,7 +131,7 @@ public class SpaceController {
             }
         }));
         Map<String, StructureOfType> targetTypesByName = new HashMap<>();
-        List<String> uniqueTypes = typesToRetrieve.stream().distinct().collect(Collectors.toList());
+        List<String> uniqueTypes = typesToRetrieve.stream().distinct().toList();
         if (!CollectionUtils.isEmpty(uniqueTypes)) {
             Map<String, KGCoreResult<StructureOfType>> targetTypesByNameResult = spaceClient.getTypesByName(uniqueTypes, false);
             targetTypesByName.putAll(Helpers.getTypesByName(targetTypesByNameResult));
@@ -168,7 +168,7 @@ public class SpaceController {
                 });
             }
         }));
-        List<String> uniqueTypes = typesToRetrieve.stream().distinct().collect(Collectors.toList());
+        List<String> uniqueTypes = typesToRetrieve.stream().distinct().toList();
         if (!CollectionUtils.isEmpty(uniqueTypes)) {
             Map<String, KGCoreResult<StructureOfType>> nestedTypesByNameResult = spaceClient.getTypesByName(uniqueTypes, true);
             Map<String, StructureOfType> nestedTypesByName = Helpers.getTypesByName(nestedTypesByNameResult);
@@ -181,9 +181,11 @@ public class SpaceController {
                 Map<String, StructureOfField> fields = new HashMap<>();
                 f.getTargetTypesNames().forEach(targetType -> {
                     StructureOfType structureOfType = typesMap.get(targetType);
-                    Map<String, StructureOfField> nestedFields = structureOfType.getFields().entrySet().stream()
-                            .collect(Collectors.toMap(Map.Entry::getKey, v -> SerializationUtils.clone(v.getValue())));
-                    fields.putAll(nestedFields);
+                    if(structureOfType != null) {
+                        Map<String, StructureOfField> nestedFields = structureOfType.getFields().entrySet().stream()
+                                .collect(Collectors.toMap(Map.Entry::getKey, v -> SerializationUtils.clone(v.getValue())));
+                        fields.putAll(nestedFields);
+                    }
                 });
                 f.setFields(fields);
             }
